# EncryptedEditor

./: .gitignore  CMakeLists.txt  README  make.sh
apps/: CMakeLists.txt  encrypt_vim.c  encrypt_vim.h  main.c
apps/test/: ut_encrypt_vim.sh
lib/include/: encrypt_api.h
lib/src/: CMakeLists.txt  encrypt_api.c  encrypt_api.cpp  encrypt_api.map  encrypter_factory.c  encrypter_factory.cpp  encrypter_factory.h  encrypter_factory.hpp  encrypter_openssl.cpp  encrypter_seed.cpp.in  encrypter_seed.hpp
lib/src/openssl/: encrypter_openssl.cpp  encrypter_openssl.hpp  encrypter_openssl_aes256cbc.cpp  encrypter_openssl_aes256cbc.hpp  encrypter_openssl_aria128cbc.cpp  encrypter_openssl_aria128cbc.hpp  encrypter_openssl_buffer.cpp  encrypter_openssl_buffer.hpp  encrypter_openssl_camellia256cbc.cpp  encrypter_openssl_camellia256cbc.hpp  encrypter_openssl_chacha20.cpp  encrypter_openssl_chacha20.hpp  encrypter_openssl_chacha20_poly1305.cpp  encrypter_openssl_chacha20_poly1305.hpp  encrypter_openssl_register.cpp  encrypter_openssl_seed.cpp  encrypter_openssl_seed.hpp
lib/test/: CMakeLists.txt  main.c
