cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/lib/include")
INCLUDE_DIRECTORIES("/usr/local/include")
set(CMAKE_VERBOSE_MAKEFILE 1)
add_definitions("-g -O0")
link_directories("${PROJECT_SOURCE_DIR}/build/lib/src")
add_executable(encrypted_vim encrypt_vim.c main.c)
target_link_libraries(encrypted_vim encrypt_api)
#target_link_libraries( wifi_landevice jansson )
INSTALL(TARGETS encrypted_vim RUNTIME DESTINATION bin)
